[gd_scene load_steps=13 format=2]

[ext_resource path="res://Multimedia/Fuentes/Kenney Pixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Multimedia/Fuentes/NormalFont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Multimedia/Botones/Instrucciones.png" type="Texture" id=3]
[ext_resource path="res://Multimedia/Botones/play.png" type="Texture" id=4]
[ext_resource path="res://Multimedia/Imagenes/DescansaSoldado.png" type="Texture" id=5]
[ext_resource path="res://Multimedia/Botones/regresar.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Creditos.gd" type="Script" id=7]
[ext_resource path="res://Multimedia/Audios/Monplaisi.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 1
outline_color = Color( 0.820313, 0.547968, 0.028038, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "Creditos"
length = 4.2
tracks/0/type = "value"
tracks/0/path = NodePath("Control3/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.4, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control2/VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control2/VBoxContainer:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3, 3.6, 4.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 35.5, 180 ), Vector2( 35.5, 106 ), Vector2( 35.5, 21 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control3/Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/TextureRect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Control/TextureRect:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.266667 ), Color( 1, 1, 1, 0.396078 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control3/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control2/VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control2/VBoxContainer:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 388, 373 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control3/Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/TextureRect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Control/TextureRect:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.266667 ) ]
}

[node name="Creditos" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Control3" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -230.0
margin_right = 230.0
margin_bottom = 291.0

[node name="Label" type="Label" parent="Control3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -230.0
margin_right = 231.0
margin_bottom = 298.0
custom_fonts/font = SubResource( 2 )
text = "FIN   DEL 
JUEGO"
align = 1
valign = 1
uppercase = true
percent_visible = 0.0

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Control"]
modulate = Color( 1, 1, 1, 0.266667 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="Control2" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -223.5
margin_top = -347.0
margin_right = 223.5

[node name="VBoxContainer" type="VBoxContainer" parent="Control2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 164.5
margin_top = 26.0
margin_right = 540.5
margin_bottom = 193.0

[node name="NuevoJuego" type="Button" parent="Control2/VBoxContainer"]
margin_right = 376.0
margin_bottom = 52.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color_hover = Color( 0.820313, 0.547968, 0.028038, 1 )
custom_colors/font_color_pressed = Color( 0.820313, 0.547968, 0.028038, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Jugar de nuevo"
icon = ExtResource( 4 )
flat = true
icon_align = 2
expand_icon = true

[node name="Creditos" type="Button" parent="Control2/VBoxContainer"]
margin_top = 56.0
margin_right = 376.0
margin_bottom = 108.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color_hover = Color( 0.820313, 0.547968, 0.028038, 1 )
custom_colors/font_color_pressed = Color( 0.820313, 0.547968, 0.028038, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Creditos"
icon = ExtResource( 3 )
flat = true
icon_align = 2
expand_icon = true

[node name="Salir" type="Button" parent="Control2/VBoxContainer"]
margin_top = 112.0
margin_right = 376.0
margin_bottom = 164.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color_hover = Color( 0.823529, 0.0705882, 0.0705882, 1 )
custom_colors/font_color_pressed = Color( 0.823529, 0.0705882, 0.0705882, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Salir"
icon = ExtResource( 6 )
flat = true
icon_align = 2
expand_icon = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Creditos"
anims/Creditos = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[connection signal="pressed" from="Control2/VBoxContainer/NuevoJuego" to="." method="_on_NuevoJuego_pressed"]
[connection signal="pressed" from="Control2/VBoxContainer/Creditos" to="." method="_on_Creditos_pressed"]
[connection signal="pressed" from="Control2/VBoxContainer/Salir" to="." method="_on_Salir_pressed"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
